objects/PC_Account_Identifier__c.object
<CustomObject>
    <description>This object will consist of fields that would help to uniquely indentify account records.</description>
    <fields>
        <fullName>PC_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PC_Account_Indentifiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Assigner__c</fullName>
        <label>Assigner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>Payer ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Identifier</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Identifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Identifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>